# Cardinal

./: .gitignore  shell.nix
cardinal-rs/: Cargo.toml  README.md  generate_plugin_crates.py
cardinal-rs/cardinal-egui/: Cargo.toml  build.rs
cardinal-rs/cardinal-egui/src/: app.rs  main.rs  wgpu_app.rs
cardinal-rs/cardinal-xr/: Cargo.toml  build_panel.py
cardinal-rs/cardinal-xr/assets/: panel.glb
cardinal-rs/cardinal-xr/examples/: hello.rs
cardinal-rs/cardinal-xr/src/: cable.rs  constants.rs  dmatex.rs  hand_menu.rs  interaction.rs  main.rs  math.rs  module_panel.rs  workspace.rs
cardinal-rs/crates/cardinal-core/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-egui/: Cargo.toml
cardinal-rs/crates/cardinal-plugin-aaronstatic/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-admiral/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-alefsbits/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-algoritmarte/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-amalgamatedharmonics/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-animatedcircuits/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-arableinstruments/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-as/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-autinn/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-axioma/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-befaco/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-bidoo/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-bidoodark/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-biset/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-bogaudiomodules/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-bogaudiomodules-helper/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-catromodulo/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-cf/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-chowdsp/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-computerscare/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-cvfunk/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-dbiz/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-dhe-modules/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-eightfold/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-enigmacurry/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-eseries/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-expertsleepers-encoders/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-extratone/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-fehlerfabrik/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-forsitan-modulare/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-fundamental/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-gluethegiant/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-goodsheperd/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-grandemodular/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-h4n4-modules/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-hamptonharmonics/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-ihtsyn/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-impromptumodular/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-impromptumodulardark/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-jw-modules/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-kocmoc/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-lifeformmodular/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-lilacloop/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-littleutils/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-lomasmodules/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-lyraemodules/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-meander/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-mindmeldmodular/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-ml-modules/: Cargo.toml  build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-mockbamodular/: Cargo.toml  build.rs
cardinal-rs/crates/cardinal-plugin-mog/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-msm/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-mus-x/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-myth-modules/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-nonlinearcircuits/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-orbits/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-p21khz/: build.rs  init_wrapper.cpp  register.cpp
cardinal-rs/crates/cardinal-plugin-p8mode/: build.rs  init_wrapper.cpp  register.cpp
(+306 files in other folders)
