[workspace]
members = [
    "crates/cardinal-core",
    "crates/cardinal-egui",
    "crates/cardinal-plugin-aaronstatic",
    "crates/cardinal-plugin-admiral",
    "crates/cardinal-plugin-algoritmarte",
    "crates/cardinal-plugin-amalgamatedharmonics",
    "crates/cardinal-plugin-animatedcircuits",
    "crates/cardinal-plugin-as",
    "crates/cardinal-plugin-autinn",
    "crates/cardinal-plugin-axioma",
    "crates/cardinal-plugin-befaco",
    "crates/cardinal-plugin-bidoo",
    "crates/cardinal-plugin-bidoodark",
    "crates/cardinal-plugin-biset",
    "crates/cardinal-plugin-bogaudiomodules",
    "crates/cardinal-plugin-catromodulo",
    "crates/cardinal-plugin-cf",
    "crates/cardinal-plugin-chowdsp",
    "crates/cardinal-plugin-computerscare",
    "crates/cardinal-plugin-cvfunk",
    "crates/cardinal-plugin-dbiz",
    "crates/cardinal-plugin-eightfold",
    "crates/cardinal-plugin-enigmacurry",
    "crates/cardinal-plugin-eseries",
    "crates/cardinal-plugin-expertsleepers-encoders",
    "crates/cardinal-plugin-extratone",
    "crates/cardinal-plugin-fehlerfabrik",
    "crates/cardinal-plugin-forsitan-modulare",
    "crates/cardinal-plugin-fundamental",
    "crates/cardinal-plugin-gluethegiant",
    "crates/cardinal-plugin-goodsheperd",
    "crates/cardinal-plugin-grandemodular",
    "crates/cardinal-plugin-h4n4-modules",
    "crates/cardinal-plugin-hamptonharmonics",
    "crates/cardinal-plugin-ihtsyn",
    "crates/cardinal-plugin-impromptumodular",
    "crates/cardinal-plugin-impromptumodulardark",
    "crates/cardinal-plugin-jw-modules",
    "crates/cardinal-plugin-kocmoc",
    "crates/cardinal-plugin-lifeformmodular",
    "crates/cardinal-plugin-lilacloop",
    "crates/cardinal-plugin-littleutils",
    "crates/cardinal-plugin-lomasmodules",
    "crates/cardinal-plugin-lyraemodules",
    "crates/cardinal-plugin-meander",
    "crates/cardinal-plugin-ml-modules",
    "crates/cardinal-plugin-mog",
    "crates/cardinal-plugin-msm",
    "crates/cardinal-plugin-mus-x",
    "crates/cardinal-plugin-myth-modules",
    "crates/cardinal-plugin-nonlinearcircuits",
    "crates/cardinal-plugin-orbits",
    "crates/cardinal-plugin-p21khz",
    "crates/cardinal-plugin-p8mode",
    "crates/cardinal-plugin-pathset",
    "crates/cardinal-plugin-pdarray",
    "crates/cardinal-plugin-pinktrombone",
    "crates/cardinal-plugin-prism",
    "crates/cardinal-plugin-rackwindows",
    "crates/cardinal-plugin-rebeltech",
    "crates/cardinal-plugin-repelzen",
    "crates/cardinal-plugin-sapphire",
    "crates/cardinal-plugin-sonusmodular",
    "crates/cardinal-plugin-stocaudio",
    "crates/cardinal-plugin-unless-modules",
    "crates/cardinal-plugin-venom",
    "crates/cardinal-plugin-whattherack",
    "crates/cardinal-plugin-wstd-drums",
    "crates/cardinal-plugin-zetacarinaemodules",
    "crates/cardinal-plugin-zzc",
    "crates/cardinal-plugins-registry",
]
resolver = "2"
