[package]
name = "cardinal-xr"
version = "0.1.0"
edition = "2024"

[dependencies]
cardinal-core = { path = "../crates/cardinal-core" }
glam = { version = "0.30.0", features = ["mint"] }
mint = "0.5.9"
tokio = { version = "1.45.0", features = ["macros", "time", "sync"] }
rustc-hash = "2.0.0"
wgpu = "29"
pollster = "0.4"

[dependencies.stardust-xr-fusion]
version = "0.51.0"
git = "https://github.com/StardustXR/core.git"

[dependencies.stardust-xr-molecules]
version = "0.51.0"
git = "https://github.com/StardustXR/molecules.git"

[dependencies.stardust-xr-asteroids]
version = "0.51.0"
git = "https://github.com/StardustXR/asteroids.git"
