[package]
name = "cardinal-egui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cardinal-core = { path = "../cardinal-core" }
eframe = { version = "0.31", default-features = false, features = ["wgpu", "default_fonts", "x11"] }
egui = "0.31"
egui-wgpu = "0.31"
wgpu = "24"
cpal = "0.15"
